--- a/home.css
+++ b/home.css
@@ -6,8 +6,14 @@ body{
     background-color: black;
 }
 .nav{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    color: white;
    border-bottom: 1px solid gray;
+}
+.nav a{
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
 }
 .hero-section{
     height: 50vh;
@@ -58,4 +64,18 @@ body{
     background-color: black;
     color: white;
 }
- 
+.about-section{
+    height: 40vh;
+    width: 100%;
+    color: white;
+    background-color: black;
+    text-align: center;
+}
+.about-section h2{
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+}
+.about-title{
+    width: 40vw;
+}
