--- a/home.css
+++ b/home.css
@@ -61,6 +61,8 @@ body {
     height: 45vh;
     width: 100%;
     border-bottom: 1px solid gray;
+    display: flex;
+    background-color: white;
 }
 .title h1 {
     font-size: 48px;
@@ -90,24 +92,78 @@ body {
     border-radius: 10px;
     margin-left: 10px;
 }
+.image img{
+width: 340px;
+height: 280px;
+margin-left: 20px;
+}
 .about-section{
     width: 100%;
-    height: 30vh;
-    border-bottom: 1px solid gray;
-}
-.about-section h1{
-    text-align: center;
-}
-.about-section p{
-    width: 65vw;
-    padding-top: 10px;
-    padding-left: 40px;
-}
-.skill-section{
     height: 40vh;
-    width: 100%;
     border-bottom: 1px solid gray;
+display: flex;
+background-image: url(../assits/Aboutimg.png);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
+ 
+.skill-section{
+    height: 45vh;
+    width: 100%;
+    border-bottom: 1px solid #e5e7eb;
+    text-align: center;
+    background: #ffffff;
+    padding-top: 40px;
+}
+
+#skill{
+    font-size: 32px;
+    margin-bottom: 30px;
+}
+
+.slill-icon{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill{
+    animation: float 3s ease-in-out infinite;
+}
+
+ 
+.skill:nth-child(1){ animation-delay: 0s; }
+.skill:nth-child(2){ animation-delay: .3s; }
+.skill:nth-child(3){ animation-delay: .6s; }
+.skill:nth-child(4){ animation-delay: .9s; }
+.skill:nth-child(5){ animation-delay: 1.2s; }
+.skill:nth-child(6){ animation-delay: 1.5s; }
+
+.skill img{
+    width: 110px;
+    height: 80px;
+    padding: 10px;
+    background: #f9fafb;
+    border-radius: 12px;
+    transition: 0.3s;
+}
+
+.skill img:hover{
+    border: 2px solid aqua;
+    box-shadow: 2px 2px 2px 2px aqua;
+    border-radius: 10px;
+}
+
+
+/* animation */
+@keyframes float {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(-15px); }
+    100% { transform: translateY(0); }
+}
+
 .project-section{
     border-bottom: 1px solid gray;
     height: 75vh;
